--- a/style.css
+++ b/style.css
@@ -6,8 +6,14 @@
 }
 
 .body{
-    background-image: url(./FUNDO.jpg);
+    background-image: url(./background.png);
     background-repeat: no-repeat;
+}
+
+p{
+    font-weight: bolder;
+    font-size: 0.8em;
+    color: rgb(112, 112, 112);
 }
 
 
@@ -40,6 +46,9 @@
     justify-content: center;
 }
 
+.titleCard{
+    height: 2em!important;
+}
 
 
 .vivo{
@@ -97,6 +106,12 @@
     cursor: pointer;
 }
 
+.btnModal{
+    font-size: 0.7em!important;
+    padding: 0em!important;
+    width: 80px;
+    height: 40px;
+}
 
 
 
